--- a/iot-watering-system.csproj
+++ b/iot-watering-system.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>iot_watering_system</RootNamespace>
+    <RootNamespace>WateringSystem</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
