--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
 # User-specific files
+*.crt
+*.ca
+*.key
 appsettings.json
 appsettings.Development.json
 *.rsuser
